@@ -45,6 +45,8 @@
 29. Provide KDE4 Solid actions file to play AudioCDs. (Only installed for KDE4
     builds)
 30. Update ultimate_providers.xml to match Clementine 1.1.1
+31. Prompt before removing dynamic rules - to be consistent with streams and
+    playlists.
 
 1.0.3
 -----
